apps/plexpy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    traefik.enable: 'true'
    traefik.frontend.rule: Host:plexpy.lab.emc2.build
    traefik.port: '8181'
  labels:
    app: plexpy
  name: plexpy
  namespace: media
spec:
  selector:
    matchLabels:
      app: plexpy
  strategy:
    type: RollingUpdate
  template:
    metadata:
      annotations:
        traefik.enable: 'true'
        traefik.frontend.rule: Host:plexpy.lab.emc2.build
        traefik.port: '8181'
      labels:
        app: plexpy
    spec:
      containers:
      - env:
        - name: PGID
          value: '1000'
        - name: PUID
          value: '1000'
        - name: TZ
          value: America/Vancouver
        image: lscr.io/linuxserver/plexpy:latest
        imagePullPolicy: IfNotPresent
        name: plexpy
        ports:
        - containerPort: 8181
        resources: {}
        volumeMounts:
        - mountPath: /config
          name: plexpy-config
      hostname: plexpy
      restartPolicy: Always
      # This DNS config modifies /etc/resolv.conf. Needed so that external domains can resolve outside of the cluster,
      # and not get trapped in the wildcard that leads back to lab.emc2.build.
      dnsConfig:
        # nameservers: ["8.8.8.8"]
        options:
          - name: ndots
            value: "2"
      volumes:
      - name: plexpy-config
        persistentVolumeClaim:
          claimName: plexpy-config
