apps/plexpy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plexpy
  namespace: media
spec:
  ports:
  - name: plexpy
    port: 8181
    protocol: TCP
    targetPort: 8181
  selector:
    app: plexpy
