apps/plexpy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  name: plexpy
  namespace: media
spec:
  ingressClassName: traefik
  rules:
  - host: plexpy.lab.emc2.build
    http:
      paths:
      - backend:
          service:
            name: plexpy
            port:
              number: 8181
        path: /
        pathType: Prefix
